add activities summary endpoint
